--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,18 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <title>Find the best opportunities in the defi landscape - defitrack</title>
+    <title>Integrate with Defi - Find Web3 Jobs - Learn - Decentrifi</title>
     <meta
             name="description"
-            content="Easily find your own investments. Reseach opportunities in the defi landscape and invest straight from the app."
+            content="Easily integrate with Defi. Reseach opportunities in the defi landscape and invest straight from the app."
     />
     <meta property="og:site_name" content="Defitrack" />
     <meta property="og:title" content="Find the best opportunities in the defi landscape." />
@@ -27,9 +27,9 @@
     />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@defitrack" />
-    <meta name="twitter:creator" content="@defitrack" />
-    <meta name="twitter:title" content="Find the best opportunities in the defi landscape." />
+    <meta name="twitter:site" content="@decentrifi" />
+    <meta name="twitter:creator" content="@decentrifi" />
+    <meta name="twitter:title" content="Integrate with Defi using our Decentrifi Defi Hub." />
     <meta
             name="twitter:description"
             content="Easily find your own investments. Reseach opportunities in the defi landscape and invest straight from the app."
