remove dark mode

--- a/public/index.html
+++ b/public/index.html
@@ -14,25 +14,25 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <title>Integrate with Defi - Find Web3 Jobs - Learn - Decentrifi</title>
+    <title>Decentrifi | Integrate Defi | EVM Analytics | Ethereum Infrastructure</title>
     <meta
             name="description"
-            content="Easily integrate with Defi. Reseach opportunities in the defi landscape and invest straight from the app."
+            content="Easily integrate with Defi. Decentrifi is the best open source DeFi API."
     />
-    <meta property="og:site_name" content="Defitrack" />
-    <meta property="og:title" content="Find the best opportunities in the defi landscape." />
+    <meta property="og:site_name" content="Decentrifi" />
+    <meta property="og:title" content="Integrate with Defi using our Decentrifi Defi Hub." />
     <meta
             property="og:description"
-            content="Easily find your own investments. Reseach opportunities in the defi landscape and invest straight from the app."
+            content="Easily integrate with Defi. Decentrifi is the best open source DeFi API."
     />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@decentrifi" />
     <meta name="twitter:creator" content="@decentrifi" />
-    <meta name="twitter:title" content="Integrate with Defi using our Decentrifi Defi Hub." />
+    <meta name="twitter:title" content="Integrate with Defi using Decentrifi Defi Hub." />
     <meta
             name="twitter:description"
-            content="Easily find your own investments. Reseach opportunities in the defi landscape and invest straight from the app."
+            content="Easily integrate with Defi. Decentrifi is the best open source DeFi API."
     />
   </head>
   <body>
